<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="SpUsage">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:src="@drawable/home_ic_fail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_single_reject_title"
        android:textColor="@color/red"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="26dp"
        android:background="@drawable/bg_corner_blue_light"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:text="@string/home_single_reject_sub_title"
            android:textColor="@color/text_primary"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_single_reject_sub_title2"
            android:textColor="@color/text_primary"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_single_reject_content1"
            android:textColor="@color/text_secondary"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_single_reject_content2"
            android:textColor="@color/text_secondary"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_single_reject_content3"
            android:textColor="@color/text_secondary"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_next_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_secondary"
            android:textSize="14dp"
            tools:text="@string/home_single_reject_content4_prefix" />
    </LinearLayout>
</LinearLayout>