<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_horizontal"
    tools:ignore="SpUsage">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:src="@drawable/home_ic_fail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/home_single_pay_failed_title"
        android:textColor="@color/text_primary"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_update_account"
        style="@style/ConstraintLayout.Align.CenterHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_corner_blue"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/home_single_pay_failed_button"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_corner_blue_light"
        android:paddingHorizontal="24dp"
        android:paddingVertical="15dp"
        android:text="@string/home_single_pay_failed_content"
        android:textColor="@color/text_primary"
        android:textSize="13dp" />
</LinearLayout>