<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="owner"
            type="pretimmediat.dialog.BankModifyConfirmDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:background="@color/gray"
        tools:ignore="SpUsage,MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/radius">

            <LinearLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/piece_bank_modify_confirm_content_part1"
                    android:textColor="@color/text_primary"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@{owner.contentPart2}"
                    android:textColor="@color/text_primary"
                    android:textSize="14dp"
                    tools:text="@string/piece_bank_modify_confirm_content_part2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/piece_bank_modify_confirm_content_part4"
                    android:textColor="@color/red"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/login_et_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/bg_stoke_corner_gray"
                    android:gravity="center_vertical"
                    android:hint="@string/piece_bank_modify_confirm_hint_captcha"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@={owner.captcha}"
                    android:textColor="@color/black"
                    android:textColorHint="#999"
                    android:textSize="13dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_layout_phone" />

                <TextView
                    android:id="@+id/login_tv_obtain_captcha"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/bank_bg_fetch_captcha"
                    android:gravity="center"
                    android:paddingHorizontal="18dp"
                    android:text="@{owner.countDownText}"
                    android:textColor="@color/blue"
                    android:textSize="12dp"
                    android:view_isSelected="@{owner.fetchEnable}"
                    android:view_onClick="@{owner.onCaptchaClick}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_et_captcha"
                    tools:text="@string/login_obtain_captcha" />

                <TextView
                    android:layout_width="194dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="34dp"
                    android:background="@drawable/selector_next"
                    android:gravity="center"
                    android:text="@string/commit"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:view_isSelected="@{owner.commitEnabled}"
                    android:view_onDebounceClick="@{owner.onCommitClick}"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:src="@drawable/ic_close"
            android:view_onClick="@{owner.onCloseClick}" />
    </LinearLayout>
</layout>