<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="owner"
            type="pretimmediat.fragment.HomePrepareFrag" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints,SpUsage">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_iv_bg_card"
                style="@style/ConstraintLayout.Align.CenterHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:src="@drawable/home_bg_single_card"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="22dp"
                android:text="@string/home_single_max_money"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@id/home_iv_bg_card"
                app:layout_constraintTop_toTopOf="@id/home_iv_bg_card" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:src="@drawable/home_ic_single_coin"
                app:layout_constraintEnd_toEndOf="@id/home_iv_bg_card"
                app:layout_constraintTop_toTopOf="@id/home_iv_bg_card" />

            <TextView
                android:id="@+id/home_tv_xof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="78dp"
                android:text="@string/xof"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/home_tv_max_money"
                app:layout_constraintStart_toStartOf="@id/home_iv_bg_card"
                app:layout_constraintTop_toTopOf="@id/home_iv_bg_card" />

            <TextView
                android:id="@+id/home_tv_max_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="78dp"
                android:text="@{owner.maxAmount}"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/home_tv_xof"
                app:layout_constraintTop_toTopOf="@id/home_iv_bg_card"
                tools:text="3650" />

            <TextView
                android:id="@+id/home_tv_length_of_loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/home_single_length_of_loan"
                android:textColor="#B7FFFFFF"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@id/home_tv_xof"
                app:layout_constraintTop_toBottomOf="@id/home_tv_xof" />

            <TextView
                android:id="@+id/home_tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@{owner.maxDay + @string/day}"
                android:textColor="#FFDE82"
                android:textSize="14dp"
                android:view_visible="@{owner.applicationSettings != null}"
                app:layout_constraintStart_toEndOf="@id/home_tv_length_of_loan"
                app:layout_constraintTop_toTopOf="@id/home_tv_length_of_loan"
                tools:text="91 jours" />

            <TextView
                android:id="@+id/home_tv_apply_loan"
                style="@style/ConstraintLayout.Align.CenterHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_corner_blue"
                android:enabled="@{!owner.refreshing}"
                android:gravity="center"
                android:paddingHorizontal="14dp"
                android:text="@string/home_single_apply_loan"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:view_onDebounceClick="@{owner.onApplyClick}"
                app:layout_constraintTop_toBottomOf="@id/home_iv_bg_card" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_iv_loan_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/home_ic_single_loan_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_tv_apply_loan" />

            <TextView
                android:id="@+id/home_tv_loan_tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="14dp"
                android:text="@string/home_single_apply_loan_tip"
                android:textColor="#363636"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/home_iv_loan_tip"
                app:layout_constraintTop_toTopOf="@id/home_iv_loan_tip" />

            <LinearLayout
                android:id="@+id/home_layout_load_guide"
                style="@style/ConstraintLayout.Match.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="19dp"
                android:background="@drawable/bg_corner_blue_light"
                android:orientation="vertical"
                android:paddingHorizontal="9dp"
                app:layout_constraintTop_toBottomOf="@id/home_tv_loan_tip">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:text="@string/home_single_apply_loan_guide"
                    android:textColor="@color/text_primary"
                    android:textSize="17dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="11dp"
                    android:background="#E6EBFE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="9dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_single_apply_loan_step_user_info"
                    app:drawableStartCompat="@drawable/home_ic_single_loan_guide_step_use_info" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#E6EBFE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="9dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_single_apply_loan_step_provide_bank"
                    app:drawableStartCompat="@drawable/home_ic_single_loan_guide_step_bank" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#E6EBFE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="9dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_single_apply_loan_step_success"
                    app:drawableStartCompat="@drawable/home_ic_single_loan_guide_step_success" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="#E6EBFE" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_iv_sketch"
                style="@style/ConstraintLayout.Align.CenterHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:imageView_source="@{owner.bannerUrl}"
                android:scaleType="centerCrop"
                android:view_visible="@{owner.bannerUrl != null}"
                app:layout_constraintTop_toBottomOf="@id/home_layout_load_guide" />

            <LinearLayout
                style="@style/ConstraintLayout.Align.CenterHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="19dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_iv_sketch">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_single_apply_loan_protocol_part1"
                    android:textColor="@color/text_primary"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_single_apply_loan_protocol_part2"
                    android:textColor="@color/blue"
                    android:textSize="12dp"
                    android:view_onDebounceClick="@{owner.onProtocolClick}" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>